--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "loop.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set UV_THREADPOOL_SIZE = 5 & node threads.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
